# nanoinfer

./: .gitignore  CLAUDE.md  README.md  REFACTOR.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  README.md
cpp/bench/: bench_http.py  bench_lookup.py  bench_spec.py  run_cuda_attn_bench.cpp  run_cuda_bench.cpp  run_cuda_ctx_sweep.cpp  run_cuda_decode_bench.cpp
cpp/bindings/: nicpp.cpp
cpp/cmake/: aarch64-linux-gnu.cmake
cpp/docs/: BASELINE-granite.md  BASELINE-llama.md  BASELINE-qwen3.md  BASELINE.md
cpp/python/: scheduler.py  spec_scheduler.py  speculative.py
cpp/python/ni/: __init__.py  async_engine.py  detok.py  engine.py  nit0.py  scheduler.py  server.py  spec_scheduler.py  speculative.py
cpp/src/: backend.cpp  backend.hpp  cache.cpp  cache.hpp  config.cpp  config.hpp  generate.cpp  generate.hpp  model.cpp  model.hpp  ops.cpp  ops.hpp  paged.cpp  paged.hpp  parallel.hpp  quant.cpp  quant.hpp  sampling.cpp  sampling.hpp  serialize.cpp  serialize.hpp  simd.hpp  tensor.cpp  tensor.hpp
cpp/src/cuda/: cuda.hpp  cuda_backend.cu  cuda_backend.hpp  cuda_elementwise.cu  cuda_gemm.cu  cuda_internal.cuh  cuda_quant.cu  cuda_runtime.cu
cpp/tests/: BASELINE-1.5b.md  BASELINE.md  bench_lookup.py  bench_spec.py  ops_parity.cpp  parity_util.hpp  run_batch.cpp  run_bench.cpp  run_binding.py  run_cache.cpp  run_cuda_attn_bench.cpp  run_cuda_batch.cpp  run_cuda_bench.cpp  run_cuda_cache.cpp  run_cuda_decode_bench.cpp  run_cuda_paged.cpp  run_cuda_parity.cpp  run_cuda_serve.py  run_generate.cpp  run_paged.cpp  run_parity.cpp  run_quant.cpp  run_serve.py  run_spec.py  run_spec_sample.py  run_spec_serve.py  test_cache.cpp  test_cuda.cpp  test_io.cpp  test_ops.cpp  test_quant.cpp  test_sampling.cpp  test_simd.cpp  test_tensor.cpp  test_util.hpp
cpp/tests/python/: gateutil.py  run_async_serve.py  run_binding.py  run_cuda_serve.py  run_detok.py  run_http_serve.py  run_serve.py  run_spec.py  run_spec_sample.py  run_spec_serve.py
cpp/tools/: dump_reference.py  export_weights.py  gen_fixtures.py  generate.py  nit0.py  serve.py  serve_http.py
nanoinfer/: __init__.py  _env.py  cache.py  config.py  generate.py  layers.py  model.py  sampling.py  weights.py
tests/: conftest.py  test_cache.py  test_generate.py  test_granite.py  test_layers.py  test_llama.py  test_qwen3.py  test_sampling.py
